2012-11-23  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/null-device.c: Return DEVICE_STATUS_VOLUME_UNLABELED |
	  DEVICE_STATUS_VOLUME_ERROR on open for reading.
	* installcheck/amdevcheck.pl: Fix.

2012-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: Swig is always compiled with
	  -Wno-deprecated-declarations
	* common-src/amflock.h: s/file_lock_/file_lock/
	* device-src/directtcp-connection.h:
	  s/DirectTCPConnection_/DirectTCPConnection/
	* ndmp-src/ndmpconnobj.h: s/NDMPConnection_/NDMPConnection/
	* server-src/cmdline.h: s/dumpspec_s/dumpspec_t/

2012-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cmdline.swg: Undo previous patch.

2012-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/libs.m4: remove deprecated warning for glib > 2.34.0
	* perl/Amanda/Cmdline.swg: s/dumpspec_t/dumpspec_s/

2012-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: return 'all slots are empty'.
	* perl/Amanda/Taper/Scan/traditional.pm: Call _user_msg on error.

2012-11-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Keep a different current_slot for each
	  config.

2012-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c (stream_read_callback): Do not cancel the
	  event in case of successful read.
	* common-src/security-util.c: Typo.

2012-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Add --init --no-restpre arguments.
	* man/xml-source/amfetchdump.8.xml: Document them.

2012-11-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/aggregate.pm, perl/Amanda/Changer/disk.pm,
	  perl/Amanda/Changer/multi.pm,
	  perl/Amanda/Changer/robot.pm: Add LOCK-TIMEOUT property.
	* perl/Amanda/Changer.pm: Handle lock-timeout property.
	* man/xml-source/amanda-changers.7.xml: Document new LOCK-TIMEOUT
	  properties.
