@@ -1,3 +1,7 @@
+2012-11-23 Dan Locks <dwlocks@zmanda.com>
+	* common_z/post_inst_functions.sh: add --no-use-agent option to gpg
+	  invocation to avoid problems with uninitialized gpg keyrings.
+
 2012-11-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/null-device.c: Return DEVICE_STATUS_VOLUME_UNLABELED |
 	  DEVICE_STATUS_VOLUME_ERROR on open for reading.
